[package]
name = "common_x"
version = "0.3.5"
edition = "2021"
description = "common"
readme = "README.md"
repository = "https://github.com/JLerxky/common_x"
license = "Apache-2.0"
authors = ["JLer <jlerxky@live.com>"]
categories = ["development-tools", "game-development", "web-programming"]
keywords = ["common"]

[features]
default = ["full"]
full = [
    "tls",
    "config",
    "file",
    "graceful",
    "hasher",
    "log",
    "mailer",
    "rand",
    "restful",
    "ron",
    "toml",
    "time",
    "signal",
]
graceful = ["dep:flume"]
tls = ["file", "dep:rcgen", "dep:rustls", "dep:rustls-pemfile"]
config = [
    "dep:async-trait",
    "dep:config",
    "dep:notify",
    "dep:parking_lot",
    "dep:reqwest",
]
file = ["dep:tokio"]
hasher = ["dep:blake3"]
log = ["dep:chrono", "dep:tracing-appender", "dep:tracing-subscriber"]
mailer = ["dep:lettre"]
rand = ["dep:rand", "dep:rand_chacha"]
restful = ["dep:salvo", "dep:serde_json", "dep:tokio"]
ron = ["dep:ron"]
signal = ["dep:tokio"]
toml = ["dep:toml"]
time = ["dep:chrono"]

[dependencies]
async-trait = { version = "0.1", optional = true }
blake3 = { version = "1.5", optional = true }
chrono = { version = "0.4", optional = true }
color-eyre = "0.6"
config = { version = "0.14", optional = true }
flume = { version = "0.11", optional = true }
lettre = { version = "0.11", optional = true }
notify = { version = "6.1", features = ["serde"], optional = true }
parking_lot = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
rcgen = { version = "0.11", features = ["pem", "x509-parser"], optional = true }
reqwest = { version = "0.11", optional = true }
ron = { version = "0.8", optional = true }
rustls = { version = "0.21", features = [
    "dangerous_configuration",
], optional = true }
rustls-pemfile = { version = "1.0", optional = true }
salvo = { version = "0.66", features = ["oapi"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.34", features = [
    "signal",
    "macros",
    "fs",
    "io-util",
    "rt-multi-thread",
], optional = true }
toml = { version = "0.8", optional = true }
tracing = "0.1"
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

[profile.dev]
debug = 0
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
missing_const_for_fn = "warn"
